--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "serve": "node server.js"
   },
   "dependencies": {
-    "@ant-design/icons-vue": "^7.0.1",
-    "@ygkit/vite-plugin-qiankun": "^0.0.1",
     "ant-design-vue": "4.1.2",
     "axios": "^0.26.1",
     "qiankun": "^2.10.16",
     "rich-axios": "^0.0.1",
-    "unplugin-vue-components": "^0.25.2",
     "vue": "^3.2.37",
-    "vue-router": "^4.2.5",
-    "webpack-merge": "^5.10.0"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "webpack-merge": "^5.10.0",
+    "unplugin-vue-components": "^0.25.2",
+    "@ygkit/vite-plugin-qiankun": "^0.0.1",
+    "@ant-design/icons-vue": "^7.0.1",
     "@rollup/plugin-inject": "^4.0.4",
     "@types/node": "^18.7.16",
     "@vitejs/plugin-legacy": "^5.3.2",
