--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "ant-design-vue": "4.1.2",
     "axios": "^0.26.1",
+    "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
     "qiankun": "^2.10.16",
     "rich-axios": "^0.0.1",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@rollup/plugin-inject": "^4.0.4",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.7.16",
     "@vitejs/plugin-legacy": "^5.3.2",
     "@vitejs/plugin-vue": "^3.1.0",
